docs: update documentations with new changes

--- a/admin-settings/cancel-ticket-transactions.mdx
+++ b/admin-settings/cancel-ticket-transactions.mdx
@@ -7,13 +7,13 @@ description: 'Organizers can now offer a cancellation feature for tickets. To en
 <Tabs>
     <Tab title="Events">
         <Steps>
-            <Step title="Navigate to the 'Dashboard' panel for different sections">
+            <Step title="Navigate to the 'Dashboard' panel by selecting any events in the 'Event' Panel">
             <img src="images/admin-settings/cancel-ticket-transactions/event dashboard.gif"/>   
             </Step>
-            <Step title="To cancel a transaction, navigate to the 'Action' column in the 'Sales' tab and click the three dots to see the actions list.">
+            <Step title="To cancel a transaction, go to the 'Sales' tab, find the 'Action' column, click on the three dots, and then select 'Cancel'.">
             <img src="images/admin-settings/cancel-ticket-transactions/cancel event.gif"/>
             </Step>
-             <Step title="Confirmation dialog will appear to the organizer to ensure the action is intentional.">
+             <Step title="Confirmation dialog will appear once the 'Cancel' button is clicked to ensure the action is intentional.">
             <img src="images/admin-settings/cancel-ticket-transactions/confirmation dialog.png"/>
             </Step>
             <Step title="Email notifications will be sent to users upon the cancellation of their tickets.">
@@ -26,13 +26,13 @@ description: 'Organizers can now offer a cancellation feature for tickets. To en
     </Tab>
     <Tab title="Membership">    
         <Steps>    
-            <Step title="Navigate to the 'Dashboard' panel for different sections">
+            <Step title="Navigate to the 'Dashboard' panel by selecting any memberships in the 'Membership' Panel">
             <img src="images/admin-settings/cancel-ticket-transactions/membership dashboard.gif"/>
             </Step>
-            <Step title="To cancel a transaction, navigate to the 'Action' column in the 'Members' tab and click the three dots to see the actions list.">
+            <Step title="To cancel a transaction, go to the 'Members' tab, find the 'Action' column, click on the three dots, and then select 'Cancel'.">
             <img src="images/admin-settings/cancel-ticket-transactions/cancel member.gif"/>
             </Step>
-             <Step title="Confirmation dialog will appear to the organizer to ensure the action is intentional.">
+             <Step title="Confirmation dialog will appear once the 'Cancel' button is clicked to ensure the action is intentional.">
             <img src="images/admin-settings/cancel-ticket-transactions/confirmation dialog.png"/>
             </Step>
             <Step title="Email notifications will be sent to users upon the cancellation of their tickets.">
@@ -45,13 +45,13 @@ description: 'Organizers can now offer a cancellation feature for tickets. To en
     </Tab>
     <Tab title="Benefits">  
         <Steps>         
-            <Step title="Navigate to the 'Dashboard' panel for different sections"> 
+            <Step title="Navigate to the 'Dashboard' panel by selecting any benefits in the 'Benefit' Panel"> 
             <img src="images/admin-settings/cancel-ticket-transactions/benefit dashboard.gif"/>
             </Step>
-            <Step title="To cancel a transaction, navigate to the 'Action' column in the 'Summary' tab and click the three dots to see the actions list.">
+            <Step title="To cancel a transaction, go to the 'Summary' tab, find the 'Action' column, click on the three dots, and then select 'Cancel'.">
             <img src="images/admin-settings/cancel-ticket-transactions/cancel benefit.gif"/>
             </Step>
-            <Step title="Confirmation dialog will appear to the organizer to ensure the action is intentional.">
+            <Step title="Confirmation dialog will appear once the 'Cancel' button is clicked to ensure the action is intentional.">
             <img src="images/admin-settings/cancel-ticket-transactions/confirmation dialog.png"/>
             </Step>
             <Step title="Email notifications will be sent to users upon the cancellation of their tickets.">
