--- a/admin-settings/collecting-user-information.mdx
+++ b/admin-settings/collecting-user-information.mdx
@@ -8,16 +8,24 @@ title: 'Collecting User Information'
 </Note>
 
 <Steps>
+    <Step title="Collecting User Information with Custom Questions">
+        **1.** Navigate to the 'Event' tab in your dashboard, select the event for which you want to collect additional information.  
+        <img src="images/admin-settings/collecting-user-information/event selection.png"/>
+        **2.** Click on 'Questions' in the left-hand menu.
+        <img src="images/admin-settings/collecting-user-information/click question panel.png"/>
+        **3.** Add your custom questions by selecting the question type (e.g., Short Answer) and entering the question text
+        <img src="images/admin-settings/collecting-user-information/question.png"/>
+        <Info>
+        Once you click 'Next', these custom questions will be displayed to the users on the checkout page. Users will be prompted to provide their answers during the registration process, ensuring you collect the necessary information.
+        </Info>
+    </Step>
     <Step title="User fill in check-out form questions">
+        User will be asked to fill in the custom questions in order to proceed to checkout.
         <img src="images/admin-settings/collecting-user-information/user filled form.png"/>
     </Step>
-    <Step title="Obtained Ticket After Checkout">
-        <img src="images/admin-settings/collecting-user-information/receive ticket.png"/>
-    </Step>
-    <Step title="Process Confirmation">
-        <img src="images/admin-settings/collecting-user-information/process confirmation.png"/>
-    </Step>
     <Step title="Organizer receive email notification">
+        
+Email will be received by the organizer with the responses to the custom questions provided by the participants during the registration process.
         <img src="images/admin-settings/collecting-user-information/email notification.png"/>
     </Step>
 </Steps>
