--- a/admin-settings/on-site-registration.mdx
+++ b/admin-settings/on-site-registration.mdx
@@ -6,17 +6,30 @@ Organizers need to request permission to enable on-site registration for their e
 </Note>
 
 <Steps>
-    <Step title="Navigate to the 'Event dashboard' panel">
-        Click 'Event' on the sidebar, choose any event, and then select the 'Dashboard Panel'.
-
+    <Step title="Navigate to the 'Event' tab, select the event with 'On-Site Registration' functionality, and then navigate to the 'Dashboard' panel.">
         <img src="images/admin-settings/on-site-registration/event dashboard panel.gif"/>
     </Step>
     <Step title="Click On-Site Registration">
-        Click 'On-Site Registration'
+        >By clicking the button, you will proceed to the on-site registration login page.
         <img src="images/admin-settings/on-site-registration/on-site registration button.png"/>
     </Step>
-    <Step title="Using On-Site Registration">
-        Once the 'On-Site Registration' button is pressed, organizers will be redirected to a form where they can enter user details. Upon submission of this form, an attendance record will be created.
-        <img src="images/admin-settings/on-site-registration/on-site registration form.png"/>
+    <Step title="Using the On Site Registration Site">
+        <Tip>Access code can be obtained on the same 'Dashboard' Panel in Step 2</Tip>
+
+        >1. **Copy and Paste the Access code**
+        ><img src="images/admin-settings/on-site-registration/access code.png"/>
+        
+        >2. **Paste the access code in the box on the site after clicking the 'On-Site Registration' button in Step 2, and submit.**
+        ><img src="images/admin-settings/on-site-registration/on-site registration site.png"/>
+
+        >3. **Fill in the On-Site Registration Form and submit to complete the registration process.**
+        ><img src="images/admin-settings/on-site-registration/on-site registration form.png"/>
+
+        >4. **After submitting the form, you can submit a new form by clicking the 'Submit New' button**
+        ><img src="images/admin-settings/on-site-registration/submit new.png"/>
+
+    </Step>
+    <Step title="">
+        
     </Step>
 </Steps>
