fix: minor fixes

--- a/admin-settings/on-site-registration.mdx
+++ b/admin-settings/on-site-registration.mdx
@@ -1,8 +1,10 @@
 ---
-title: 'On-Site Registration'
+title: "On-Site Registration"
 ---
+
 <Note>
-Organizers need to request permission to enable on-site registration for their events. Once requested, our team will handle the addition of this feature.
+  Organizers need to request permission to enable on-site registration for their
+  events. Once requested, our team will handle the addition of this feature.
 </Note>
 
 <Steps>
@@ -18,7 +20,7 @@ Organizers need to request permission to enable on-site registration for their e
 
         >1. **Copy and Paste the Access code**
         ><img src="images/admin-settings/on-site-registration/access code.png"/>
-        
+
         >2. **Paste the access code in the box on the site after clicking the 'On-Site Registration' button in Step 2, and submit.**
         ><img src="images/admin-settings/on-site-registration/on-site registration site.png"/>
 
@@ -29,7 +31,5 @@ Organizers need to request permission to enable on-site registration for their e
         ><img src="images/admin-settings/on-site-registration/submit new.png"/>
 
     </Step>
-    <Step title="">
-        
-    </Step>
+
 </Steps>
