--- a/creating-campaign/ticketing/require-approval.mdx
+++ b/creating-campaign/ticketing/require-approval.mdx
@@ -1,8 +1,10 @@
 ---
-title: 'Require Approval'
+title: "Require Approval"
 ---
+
 <Tip>
-Event tickets supported with an approval functionality, allows organizers to create tickets that can only be granted by the organizer.
+  Event tickets supported with an approval functionality, allows organizers to
+  create tickets that can only be granted by the organizer.
 </Tip>
 
 <AccordionGroup>
@@ -50,7 +52,7 @@ Event tickets supported with an approval functionality, allows organizers to cre
                             <img src="images/creating-campaign/ticketing/require approval/rejected status.gif"/>
                         </Step>
                         <Step title="Email Sent to User">
-                            >Email notification of rejected registration will be send to the selected user.
+                            >Email notification of rejected registration will be sent to the selected user.
                             <img src="images/creating-campaign/ticketing/require approval/rejected email.png"/>
                         </Step>
                     </Steps>
@@ -62,7 +64,7 @@ Event tickets supported with an approval functionality, allows organizers to cre
                             <img src="images/creating-campaign/ticketing/require approval/approved status.gif"/>
                         </Step>
                         <Step title="Email Sent to User">
-                            Email notification of approved registration will be send to the selected user.
+                            Email notification of approved registration will be sent to the selected user.
                             <img src="images/creating-campaign/ticketing/require approval/approved email.png"/>
                         </Step>
                         <Step title="Approved Airdrop Status">
@@ -74,4 +76,5 @@ Event tickets supported with an approval functionality, allows organizers to cre
             </Step>
         </Steps>
     </Accordion>
+
 </AccordionGroup>
