--- a/customer-insights/data-reports.mdx
+++ b/customer-insights/data-reports.mdx
@@ -1,10 +1,11 @@
 ---
-title: 'Data Reports' 
+title: "Data Reports"
 ---
 
 > **Download Sales, Attendance & Email Sent Data**
+
 <Steps>
-    <Step title="Navigate to the 'Report' Panel">
+    <Step title="Navigate to the 'Reports' Panel">
         <img src="images/customer-insights/sales-attendance-data/report panel.gif"/>
     </Step>
     <Step title="Select Event">
@@ -21,4 +22,5 @@ title: 'Data Reports'
         Once you have selected the desired event and report type(s), click the 'Download Selected' button to download the reports in CSV format for data analytics.
         <img src="images/customer-insights/sales-attendance-data/download reports.gif"/>
     </Step>
+
 </Steps>
