--- a/creating-campaign/stripe-payment-feature/stripe.mdx
+++ b/creating-campaign/stripe-payment-feature/stripe.mdx
@@ -5,18 +5,19 @@ title: 'Stripe Connected Payments'
 <Note>To enable the Stripe feature and connect your account to Moongate's Stripe account, please contact Moongate for permission.</Note>
 
 ## What is Stripe Connect?
-> Stripe Connect is a service that allows platforms to manage payments on behalf of their users. Here's an example to illustrate how it works:
+> Stripe Connect is a feature that allows your payments to be sent directly to your account while Moongate handles the associated fees.
 >
-> Imagine you are an event organizer using Moongate to host and manage your events. You want to sell tickets online and receive payments from attendees. Instead of setting up your own payment processing system, you can use Stripe Connect. Moongate, as the platform, handles the payment processing for you. This means:
+> Imagine you are an event organizer using Moongate to host and manage your events. You want to sell tickets online and receive payments from attendees. Instead of setting up your own payment processing system, you can use Stripe Connect.
 >
-> **Moongate:** Manages the transactions, ensuring payments from ticket sales go through smoothly. <br />
+> **Moongate:** Acts as the ticketing platform and integrates with Stripe Connect to facilitate transactions.
 >
-> **Organizer (You):** Receives payments from ticket sales directly to your account without having to worry about the complexities of payment processing.
-> This allows you to focus on organizing your event while Moongate and Stripe Connect take care of the financial transactions.
+> **Organizer (You):** Receives payments from ticket sales directly to your Stripe account, eliminating the need to request payouts from Moongate. This allows you to focus on organizing your event while Stripe Connect handles the payment processing.
+>
+> **Platform Fees:** Moongate receives the platform fees automatically, so you don’t have to worry about deducting and handling these fees yourself.
 
 <Steps>
-    <Step title="Contact Moongate and Receive a One-Time Link">
-        1. Contact Moongate by clicking <a href="mailto:support@moongate.id">**Contact Support**</a> and request a Stripe connected account from our customer support team. <br />
+    <Step title="Contact support and receive a link to signup for Stripe Connect">
+        1. Contact Moongate by clicking <a href="mailto:support@moongate.id">**Contact Support**</a> and request our Customer Support Team to enable this feature, along with an **Explanation** of why you need it enabled. <br />
         2. Moongate will then send you a **One-Time Link**, which will look like this: <br />
            <img src="/images/creating-campaign/stripe-payment-feature/one-time-link.png" />
     </Step>
@@ -26,5 +27,5 @@ title: 'Stripe Connected Payments'
     </Step>
 </Steps>
 
+<Warning>After you have finished entering your details, please contact our customer support team again so we can verify everything for you.</Warning>
 <Check>Once you have completed all of this, you will be connected to Moongate's Stripe account.</Check>
-<Warning>After you have finished entering your details, please our customer support team again so we can verify everything for you.</Warning>
