docs: update stripe connect description

--- a/creating-campaign/stripe-payment-feature/stripe.mdx
+++ b/creating-campaign/stripe-payment-feature/stripe.mdx
@@ -7,14 +7,12 @@ title: 'Stripe Connected Payments'
 ## What is Stripe Connect?
 > Stripe Connect is a feature that allows your payments to be sent directly to your account while Moongate handles the associated fees.
 >
-> Imagine you are an event organizer using Moongate to host and manage your events. You want to sell tickets online and receive payments from attendees. Instead of setting up your own payment processing system, you can use Stripe Connect.
 >
-> **Moongate:** Acts as the ticketing platform and integrates with Stripe Connect to facilitate transactions.
+> **User:** Purchases the ticket from Moongate and pays the ticket price along with platform fees.
 >
 > **Organizer (You):** Receives payments from ticket sales directly to your Stripe account, eliminating the need to request payouts from Moongate. This allows you to focus on organizing your event while Stripe Connect handles the payment processing.
 >
-> **Platform Fees:** Moongate receives the platform fees automatically, so you don’t have to worry about deducting and handling these fees yourself.
-
+> **Platform Fees:** Moongate receives the platform fees automatically
 <Steps>
     <Step title="Contact support and receive a link to signup for Stripe Connect">
         1. Contact Moongate by clicking <a href="mailto:support@moongate.id">**Contact Support**</a> and request our Customer Support Team to enable this feature, along with an **Explanation** of why you need it enabled. <br />
