docs: add title

--- a/creating-campaign/stripe-payment-feature/stripe.mdx
+++ b/creating-campaign/stripe-payment-feature/stripe.mdx
@@ -13,6 +13,8 @@ title: 'Stripe Connected Payments'
 > **Organizer (You):** Receives payments from ticket sales directly to your Stripe account, eliminating the need to request payouts from Moongate. This allows you to focus on organizing your event while Stripe Connect handles the payment processing.
 >
 > **Platform Fees:** Moongate receives the platform fees automatically
+
+## How to Enable Stripe Connect
 <Steps>
     <Step title="Contact support and receive a link to signup for Stripe Connect">
         1. Contact Moongate by clicking <a href="mailto:support@moongate.id">**Contact Support**</a> and request our Customer Support Team to enable this feature, along with an **Explanation** of why you need it enabled. <br />
