docs: add apple or google wallet

--- a/user-guide/the-basics/user-check-in-guide.mdx
+++ b/user-guide/the-basics/user-check-in-guide.mdx
@@ -9,12 +9,8 @@ title: 'Checking Into Events/Proving Membership'
     <Step title="Present your QR code">
         Simply present the pop-up QR code to the event/membership check-in staff to scan. This QR code will work for 
         all of your events/memberships – no need to select anything!
+        <Tip>You can use Apple Wallet or Google Wallet to save the QR code to your phone.</Tip>
         <img src="/user-guide/images/the-basics/user-check-in-guide/website qr code.png"/>
-        <Info>
-            To combat ticketing fraud, this QR code will refresh every 15 seconds. It can also be manually refreshed by 
-            clicking the "Refresh" button at the bottom of the pop-up window.
-            <img src="/user-guide/images/the-basics/user-check-in-guide/refresh.png"/>
-        </Info>
         <Info>
             You will also have received a confirmation email when you purchased your ticket/membership pass. This email 
             contains a QR code for that ticket/membership pass that can also be used to check-in.
