docs: add deployed contract docs

--- a/creating-campaign/membership/creatememtier.mdx
+++ b/creating-campaign/membership/creatememtier.mdx
@@ -81,4 +81,9 @@ title: 'Creating Membership Tiers'
         Once you have finalized your membership program and tiering details, click "Publish" to launch your event.
         <img src="/images/creating-campaign/membership/creating tier/Publish Button.png"/>
     </Step>
+    <Step title="Preview Deployed Contract">
+        After publishing your events, you can preview the deployed contract in the **Advanced Settings**.
+        <Warning>Deployed contract is only visible to published events, not to draft events.</Warning>
+        <img src="/images/creating-campaign/membership/creating tier/deployed contract.png"/>
+    </Step>
 </Steps>
