--- a/creating-campaign/ticketing/createtickets.mdx
+++ b/creating-campaign/ticketing/createtickets.mdx
@@ -121,4 +121,9 @@ title: 'Creating Tickets'
     Once you have finalized your event and ticket details, click "Publish" to launch your event.
     <img src="/images/creating-campaign/ticketing/creating tickets/Publish Button Location.png"/>
   </Step>
+  <Step title="Preview Deployed Contract">
+    After publishing your events, you can preview the deployed contract in the **Advanced Settings**.
+    <Warning>Deployed contract is only visible to published events, not to draft events.</Warning>
+    <img src="/images/creating-campaign/ticketing/creating tickets/deployed contract.png"/>
+  </Step>
 </Steps>
