docs: update deployed contract documentations

--- a/creating-campaign/ticketing/createtickets.mdx
+++ b/creating-campaign/ticketing/createtickets.mdx
@@ -122,8 +122,8 @@ title: 'Creating Tickets'
     <img src="/images/creating-campaign/ticketing/creating tickets/Publish Button Location.png"/>
   </Step>
   <Step title="Preview Deployed Contract">
-    After publishing your events, you can preview the deployed contract in the **Advanced Settings**.
-    <Warning>Deployed contract is only visible to published events, not to draft events.</Warning>
+    After publishing your event, you can preview the deployed contract address in the **Advanced Settings**.
+    <Warning>The Deployed Contract field cannot be changed and is only visible for published events, not for draft events.</Warning>
     <img src="/images/creating-campaign/ticketing/creating tickets/deployed contract.png"/>
   </Step>
 </Steps>
