--- a/creating-campaign/membership/creatememtier.mdx
+++ b/creating-campaign/membership/creatememtier.mdx
@@ -82,8 +82,8 @@ title: 'Creating Membership Tiers'
         <img src="/images/creating-campaign/membership/creating tier/Publish Button.png"/>
     </Step>
     <Step title="Preview Deployed Contract">
-        After publishing your events, you can preview the deployed contract in the **Advanced Settings**.
-        <Warning>Deployed contract is only visible to published events, not to draft events.</Warning>
+        After publishing your membership, you can preview the deployed contract address in the **Advanced Settings**.
+        <Warning>The Deployed Contract field cannot be changed and is only visible for published memberships, not for draft memberships.</Warning>
         <img src="/images/creating-campaign/membership/creating tier/deployed contract.png"/>
     </Step>
 </Steps>
