docs: remove xlayer

--- a/user-guide/managing-wallet/manually-add-nft.mdx
+++ b/user-guide/managing-wallet/manually-add-nft.mdx
@@ -12,7 +12,7 @@ If you're using an external wallet with Moongate, you'll likely need to manually
 
 <Steps>
     <Step title="Configure your wallet to support the same chain that the NFT ticket/membership is deployed on">
-        Campaigns powered by Moongate are often deployed on the Polygon, BNB Chain, Arbitrum, Avalanche, and XLayer chains. If your wallet is not already configured to access these chains, you'll have to add them yourself.
+        Campaigns powered by Moongate are often deployed on the Polygon, BNB Chain, Arbitrum, Avalanche, Base, and Scroll chains. If your wallet is not already configured to access these chains, you'll have to add them yourself.
         
         Please refer to your wallet provider's documentation for instructions on how to add a new chain to your wallet. Below is an example using [Metamask](https://support.metamask.io/hc/en-us/articles/360043227612-How-to-add-a-custom-network-RPC#h_01G63GGCJH5GCYDYPH5RNWNZQ8), but the process may differ depending on your wallet provider.
         <Frame caption="How to add a new chain to a Metamask wallet">
