docs: add mobile image and steps

--- a/user-guide/the-basics/install-web-app.mdx
+++ b/user-guide/the-basics/install-web-app.mdx
@@ -27,4 +27,16 @@ title: 'How to Install Our Web App'
     <Step title="Follow the instructions as labeled after clicking the button.">
         <img src="/user-guide/images/the-basics/install-web-app/click install app.png"/>
     </Step>
+    <Step title="Click on the Share Icon at the bottom">
+        <img src="/user-guide/images/the-basics/install-web-app/mobile share icon.png"/>
+    </Step>
+    <Step title="Click 'Add to Home Screen' button">
+        <img src="/user-guide/images/the-basics/install-web-app/click add to home screen.png"/>
+    </Step>
+    <Step title="Click 'Add' button">
+        <img src="/user-guide/images/the-basics/install-web-app/click add.png"/>
+    </Step>
+    <Step title="Moongate app will be added to your mobile home screen.">
+        <img src="/user-guide/images/the-basics/install-web-app/moongate app.png"/>
+    </Step>
 </Steps>
