docs: add updated image

--- a/user-guide/the-basics/install-app.mdx
+++ b/user-guide/the-basics/install-app.mdx
@@ -1,3 +1,42 @@
 ---
 title: 'How to Install Our App'
 ---
+
+### Desktop
+<Steps>
+    <Step title="Navigate to Moongate Discover Page">
+        <img src="/user-guide/images/the-basics/install-app/discover page.png"/>
+    </Step>
+    <Step title="Click the Install button at the top right of the Chrome browser.">
+        <img src="/user-guide/images/the-basics/install-app/install button.png"/>
+    </Step>
+    <Step title="A modal will appear to install the app">
+        <img src="/user-guide/images/the-basics/install-app/click install app desktop.png"/>
+    </Step>
+</Steps>
+
+
+### Mobile
+<Steps>
+    <Step title="Navigate to Moongate Discover Page">
+        <img src="/user-guide/images/the-basics/install-app/discover page mobile.png"/>
+    </Step>
+    <Step title="Scroll down until you can find the 'Install App' Button">
+        <img src="/user-guide/images/the-basics/install-app/install button mobile.png"/>
+    </Step>
+    <Step title="Follow the instructions as labeled after clicking the button.">
+        <img src="/user-guide/images/the-basics/install-app/click install app.png"/>
+    </Step>
+    <Step title="Click on the Share Icon at the bottom">
+        <img src="/user-guide/images/the-basics/install-app/mobile share icon.png"/>
+    </Step>
+    <Step title="Click 'Add to Home Screen' button">
+        <img src="/user-guide/images/the-basics/install-app/click add to home screen.png"/>
+    </Step>
+    <Step title="Click 'Add' button">
+        <img src="/user-guide/images/the-basics/install-app/click add.png"/>
+    </Step>
+    <Step title="Moongate app will be added to your mobile home screen.">
+        <img src="/user-guide/images/the-basics/install-app/moongate app.png"/>
+    </Step>
+</Steps>
