docs: connecting wallet issue faq

--- a/user-guide/support/user-faq.mdx
+++ b/user-guide/support/user-faq.mdx
@@ -93,4 +93,8 @@ title: 'User FAQs'
 
         [Mobile](https://youtu.be/63A_pSEY-4w)
     </Accordion>
+    <Accordion title="I'm Having Issues Connecting a Wallet App.">
+        - Please ensure that the wallet app (e.g. Bitget Wallet) is installed on your phone. If the app is not yet installed, please download it from your device’s app store to proceed.
+        - Alternatively, for any issues with connecting a mobile wallet app, users are advised to access our Moongate website directly through the browser feature within their wallet app. 
+    </Accordion>
 </AccordionGroup>
