docs: update moonfarmer faq

--- a/user-guide/moon-odyssey/moon-odyssey-faq.mdx
+++ b/user-guide/moon-odyssey/moon-odyssey-faq.mdx
@@ -23,8 +23,8 @@ title: 'Moon Odyssey FAQ'
         - Refer friends for additional points.
     </Accordion>
     <Accordion title="What is the MoonVP NFT?">
-        The MoonVP NFT, limited to 6,969 pieces, offers $MGT airdrops and exclusive benefits. Qualify by earning 50,000 base points.
-
+        The MoonVP NFT is a limited collectable that offers guaranteed $MGT airdrops and exclusive benefits to holders. You can qualify for the whitelist by earning 50,000 base points.
+        
         **Key Benefits:**
 
         - **Guaranteed $MGT Airdrop**
@@ -33,9 +33,10 @@ title: 'Moon Odyssey FAQ'
 
         **Mint Details:**
 
-        - **Date:** August 26th
-        - **Cost:** Free
-        - **Method:** FCFS
+        - **Mint Date:** TBD
+        - **Mint Cost:** TBD
+        - **Whitelist Requirements:** 50,000+ base points in Moon Odyssey
+        - **Method:** FCFS
     </Accordion>
     <Accordion title="Can I earn points by attending or participating in events?">
         Yes, Earn points by promoting and interacting with events listed on our Discover Page.
