--- a/user-guide/quest-app/user-quest-guide.mdx
+++ b/user-guide/quest-app/user-quest-guide.mdx
@@ -20,6 +20,7 @@ description: "A step-by-step guide for using our quest app"
 </Step>
 
 <Step title="Logging Into the Quest App">
+  <Note>In-App Browser wont be supported for logging in.</Note>
   - Log in using your preferred method (Google or Email) to authenticate.
   <img width="300" src="/user-guide/images/quest-app/quest auth.png" />
 </Step>
