feat(quest-app): added note and updated images

--- a/user-guide/quest-app/user-quest-guide.mdx
+++ b/user-guide/quest-app/user-quest-guide.mdx
@@ -3,6 +3,7 @@ title: "Using Our Quest App"
 description: "A step-by-step guide for using our quest app"
 ---
 
+<Note>In-App Browser is not supported</Note>
 <Info>
   This guide is for users participating in events that feature an interactive
   quest experience.
@@ -20,7 +21,6 @@ description: "A step-by-step guide for using our quest app"
 </Step>
 
 <Step title="Logging Into the Quest App">
-  <Note>In-App Browser wont be supported for logging in.</Note>
   - Log in using your preferred method (Google or Email) to authenticate.
   <img width="300" src="/user-guide/images/quest-app/quest auth.png" />
 </Step>
