fix(user-guide): update button text

--- a/user-guide/quest-app/user-quest-guide.mdx
+++ b/user-guide/quest-app/user-quest-guide.mdx
@@ -16,7 +16,7 @@ description: "A step-by-step guide for using our quest app"
     - Find the event's quest URL at the event location (available via a
     clickable link or QR code).
   </p>
-  - Access the quest page and click the **Join Quest** button.
+  - Access the quest page and click the **START QUESTING** button.
   <img width="300" src="/user-guide/images/quest-app/quest landing.png" />
 </Step>
 
