docs: added docs

--- a/creating-campaign/ticketing/createtickets.mdx
+++ b/creating-campaign/ticketing/createtickets.mdx
@@ -126,4 +126,9 @@ title: 'Creating Tickets'
     <Warning>The Deployed Contract field cannot be changed and is only visible for published events, not for draft events.</Warning>
     <img src="/images/creating-campaign/ticketing/creating tickets/deployed contract.png"/>
   </Step>
+    <Step title="Toggle Email Notifications">
+    You can toggle if you wish to receive email notifications for every ticket purchased in your published events.
+    <Info>If you do not want to receive email notifications for any of your events, you can contact support</Info>
+    <img src="/images/creating-campaign/ticketing/creating tickets/receive email notification.png"/>
+  </Step>
 </Steps>
