--- a/user-guide/managing-wallet/transferring-nft.mdx
+++ b/user-guide/managing-wallet/transferring-nft.mdx
@@ -16,6 +16,7 @@ title: 'Transferring a Ticket/Membership'
     - [Bybit Wallet](https://www.bybit.com/en/help-center/article/How-to-Withdraw-Your-NFT-from-Bybit)
     - [OneKey](https://help.onekey.so/hc/en-us/articles/9159188814863-Send-and-Receive-crypto-assets-in-OneKey-App)
     - [XDEFI](https://www.xdefi.io/article/manage-nfts/)
+    - [Binance Wallet](https://www.binance.com/en/support/faq/how-to-withdraw-nfts-from-binance-a2fb25696162460f9379c0ba43c5c622)
 </Info>
 <Info>
     If you have received an NFT ticket/membership pass for a campaign administered by Moongate in an external wallet but **do not have a Moongate account**, follow [these instructions](/user-guide/the-basics/signup-login)
