refactor(user-guide): update accordion title

--- a/user-guide/managing-wallet/manage-non-custodial-wallet.mdx
+++ b/user-guide/managing-wallet/manage-non-custodial-wallet.mdx
@@ -63,7 +63,7 @@ description: 'View your NFTs in, gain custody of, and manage your automatically 
     </Steps>
 
 </Accordion>
-<Accordion title="Signing into OpenSea With Your Wallet">
+<Accordion title="Signing into OpenSea and other dApps using WalletConnect">
     <Steps>        
         <Step title="Select the WalletConnect option on OpenSea">
             <img src="/user-guide/images/managing-wallet/manage-non-custodial-wallet/walletconnectonopensea.png"/>
