Documentation edits made through Mintlify web editor

--- a/user-guide/season3/season3-faq.mdx
+++ b/user-guide/season3/season3-faq.mdx
@@ -1,62 +1,87 @@
 ---
-title: 'Moon Odyssey FAQ'
+title: "Season 3 FAQ"
 ---
 
 <AccordionGroup>
-    <Accordion title="How do I participate in Moon Odyssey?">
-        Register at [Moongate](https://app.moongate.id/), explore the Quest tab, and start earning points through:
-        - Completing quests
-        - Engaging with Moongate and our partners
-    </Accordion>
-    <Accordion title="How do I navigate the platform?">
-        - **Log in:** Either connect your wallet or sign in using your email. If you sign in using your email, we will create a non-custodial wallet for you.
-        - **Discover:** Discover all upcoming Web3 events.
-        - **Quest:** Explore quests to earn points.
-        - **Pass:** Access your NFT tickets for upcoming events.
-        - **Benefits:** View token-gated benefits linked to your NFTs.
-    </Accordion>
-    <Accordion title="How do I earn points?">
-        Earning points is easy:
-        - Complete onboarding quests for full access.
-        - Daily check-ins and tasks.
-        - Promote events and create content about Moongate.
-        - Refer friends for additional points.
-    </Accordion>
-    <Accordion title="What is the MoonVP NFT?">
-        The MoonVP NFT is a limited collectable that offers guaranteed $MGT airdrops and exclusive benefits to holders. You can qualify for the whitelist by earning 50,000 base points.
-        
-        **Key Benefits:**
+  <Accordion title="How do I participate in Moon Odyssey?">
+    Register at [Moongate](https://app.moongate.id/), explore the Quest tab, and start earning points through:
 
-        - **Guaranteed $MGT Airdrop**
-        - **Exclusive Event Access and Early Product Features:** First look and entry to new developments and select events.
-        - **Partner Perks:** Enjoy special offers from Moongate's partners.
+    * Completing quests
 
-        **Mint Details:**
+    * Engaging with Moongate and our partners
+  </Accordion>
 
-        - **Mint Date:** TBD
-        - **Mint Cost:** TBD
-        - **Whitelist Requirements:** 50,000+ base points in Moon Odyssey
-        - **Method:** FCFS
-    </Accordion>
-    <Accordion title="Can I earn points by attending or participating in events?">
-        Yes, Earn points by promoting and interacting with events listed on our Discover Page.
-    </Accordion>
-    <Accordion title="How does the referral system work in Moon Odyssey?">
-        Earn 10% of the points your referrals earn and 3% of the points their referrals earn. Share your unique link available in the Moon Odyssey dashboard.
-    </Accordion>
-    <Accordion title="What are powerups and how do I earn them?">
-        Power-Ups multiply base points earned from quests. They are stackable, non-transferable, and limited to one of each type per account.
-    </Accordion>
-    <Accordion title="Is there a leaderboard to see how we stack up against others in Moon Odyssey?">
-        Our leaderboard feature is currently under construction. It will track and display your ranking and progress.
-    </Accordion>
-    <Accordion title="How do I claim my airdrop?">
-        Stay tuned for more details on our token launch. Keep earning points and prepare for our upcoming Airdrop!
-    </Accordion>
-    <Accordion title="What will happen to participants from the previous MoonFarmer campaign when Moon Odyssey launches?">
-        - **Point Reset:** All points from MoonFarmer will be reset to zero in Moon Odyssey.
-        - **Airdrop Allocation:** A special portion of our airdrop will be dedicated to participants of MoonFarmer, further details will be coming in September.
-        - **Power-Ups for Previous Participants:** Previous Tier 2 and higher Powerups will get an OG Power-Up which will give you an extra 30% multiplier on all your base points, claimable manually in Moon Odyssey.
-    </Accordion>
+  <Accordion title="How do I navigate the platform?">
+    * **Log in:** Either connect your wallet or sign in using your email. If you sign in using your email, we will create a non-custodial wallet for you.
+
+    * **Discover:** Discover all upcoming Web3 events.
+
+    * **Quest:** Explore quests to earn points.
+
+    * **Pass:** Access your NFT tickets for upcoming events.
+
+    * **Benefits:** View token-gated benefits linked to your NFTs.
+  </Accordion>
+
+  <Accordion title="How do I earn points?">
+    Earning points is easy:
+
+    * Complete onboarding quests for full access.
+
+    * Daily check-ins and tasks.
+
+    * Promote events and create content about Moongate.
+
+    * Refer friends for additional points.
+  </Accordion>
+
+  <Accordion title="What is the MoonVP NFT?">
+    The MoonVP NFT is a limited collectable that offers guaranteed $MGT airdrops and exclusive benefits to holders. You can qualify for the whitelist by earning 50,000 base points.
+
+    **Key Benefits:**
+
+    * **Guaranteed $MGT Airdrop**
+
+    * **Exclusive Event Access and Early Product Features:** First look and entry to new developments and select events.
+
+    * **Partner Perks:** Enjoy special offers from Moongate's partners.
+
+    **Mint Details:**
+
+    * **Mint Date:** TBD
+
+    * **Mint Cost:** TBD
+
+    * **Whitelist Requirements:** 50,000+ base points in Moon Odyssey
+
+    * **Method:** FCFS
+  </Accordion>
+
+  <Accordion title="Can I earn points by attending or participating in events?">
+    Yes, Earn points by promoting and interacting with events listed on our Discover Page.
+  </Accordion>
+
+  <Accordion title="How does the referral system work in Moon Odyssey?">
+    Earn 10% of the points your referrals earn and 3% of the points their referrals earn. Share your unique link available in the Moon Odyssey dashboard.
+  </Accordion>
+
+  <Accordion title="What are powerups and how do I earn them?">
+    Power-Ups multiply base points earned from quests. They are stackable, non-transferable, and limited to one of each type per account.
+  </Accordion>
+
+  <Accordion title="Is there a leaderboard to see how we stack up against others in Moon Odyssey?">
+    Our leaderboard feature is currently under construction. It will track and display your ranking and progress.
+  </Accordion>
+
+  <Accordion title="How do I claim my airdrop?">
+    Stay tuned for more details on our token launch. Keep earning points and prepare for our upcoming Airdrop!
+  </Accordion>
+
+  <Accordion title="What will happen to participants from the previous MoonFarmer campaign when Moon Odyssey launches?">
+    * **Point Reset:** All points from MoonFarmer will be reset to zero in Moon Odyssey.
+
+    * **Airdrop Allocation:** A special portion of our airdrop will be dedicated to participants of MoonFarmer, further details will be coming in September.
+
+    * **Power-Ups for Previous Participants:** Previous Tier 2 and higher Powerups will get an OG Power-Up which will give you an extra 30% multiplier on all your base points, claimable manually in Moon Odyssey.
+  </Accordion>
 </AccordionGroup>
-   
